# NeuralChess

./: .gitignore  AGENTS.md  README.md  modal_app.py  neuralchess-engine  pyproject.toml
configs/: cnn_small.json  transformer_small.json  transformer_tiny.json
scripts/: analyze_data.py  benchmark.py  download_data.py  model_info.py  overfit.sh  play.py  plot_metrics.py  train.py  train.sh  uci.py
src/neuralchess/: download_data.py  engine.py  tensorboard_app.py  train.py  uci.py  zobrist.py
src/neuralchess/core/: __init__.py  dataset.py  eval_utils.py
src/neuralchess/encoders/: __init__.py  base.py  bitboard.py  tokenizer.py
src/neuralchess/models/: __init__.py  base.py  cnn.py  material.py  transformer.py
tests/: test_bitboard_encoder.py  test_cnn_model.py  test_dataset.py  test_engine.py  test_eval_utils.py  test_zobrist.py
